fix: overlapping text and image (#23)
* fix: overlapping text and image
This fix uses flexbox (display flex)


* fix: button wrap
Having an `a` tag as a button is not big brain.
This commit changes the `a` tag to a `button` tag


* Fixing Conflicts :tada:

--- a/files/styles/homepage.css
+++ b/files/styles/homepage.css
@@ -166,3 +166,67 @@ p {
 i {
   color: yellow;
 }
+
+/* Header */
+
+.header-masthead {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+  max-width: 32rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.header-masthead > img {
+  border: 4px solid #4caf50;
+  border-radius: 100%;
+  max-width: 150px;
+  max-height: 150px;
+  left: 30%;
+}
+
+.header-masthead > span {
+  margin-left: 1rem;
+  font-family: "Londrina Shadow";
+  font-size: 370%;
+  color: #00aeff;
+}
+
+header > hr {
+  margin-bottom: 2rem;
+}
+
+/* Project Section */
+
+.project {
+  font-family: "Comfortaa";
+  display: flex;
+  flex-direction: row;
+}
+
+.project-description {
+  display: flex;
+  align-items: center;
+}
+
+.project-description {
+  padding: 1em;
+}
+
+.project-description > span {
+  color: orange;
+}
+
+.project-image > a > img {
+  width: 100px;
+  height: 100px;
+  border: 2px solid #4caf50;
+  border-radius: 100%;
+  transition-duration: 0.4s;
+}
+
+.project-image:hover > a > img {
+  background-color: #4caf50;
+  border: 2px solid orange;
